# rust-scrcpy-client

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/ui/: constants.rs
